# nitrorom

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  meson.build  meson.options  requirements.txt
.github/workflows/: pre-commit.yaml
docs/: meson.build  nitrorom-list.adoc  nitrorom-pack.adoc  nitrorom.adoc  sdk_tooling.md
examples/: cpue.ini  pokeplatinum.rsf
include/: clip.h  config.h  constants.h  errout.h  fileio.h  global.h  hashmap.h  io.h  layout.h  lexer.h  litend.h  makerom.h  nitrorom.h  packer.h  parser.h  sheets.h  strings.h  vector.h
include/libs/: clip.h  config.h  fileio.h  litend.h  sheets.h  strings.h
source/: config.c  fileio.c  main.c  nitrorom.c  nitrorom_list.c  nitrorom_pack.c  packer.c  sheets.c  strings.c
source/cfgparse/: cfg_arm.c  cfg_banner.c  cfg_header.c  cfg_rom.c  cfgparse.h
source/libs/: clip.c  config.c  fileio.c  sheets.c  strings.c
source/parse/: cfg_arm.c  cfg_banner.c  cfg_header.c  cfg_rom.c  cfgparse.h  csv_addfile.c
src/: errout.c  hashmap.c  io.c  layout.c  lexer.c  main.c  makerom.c  parser.c
tests/: meson.build  test_clip.c  test_config.c  test_sheets.c
tests/config/: nokey.ini  nosec.ini  ok.ini  unknownsec.ini  untermsec.ini
tests/sheets/: enclosed.csv  onerow.csv  tworows.csv
tools/: setup-testdir.sh  tag-release.sh
