option(
    'native',
    type: 'boolean',
    value: true,
    description: 'Force native compilation, even in a cross-compilation setup',
)

option(
    'manuals',
    type: 'boolean',
    value: false,
    description: 'Generate manual pages from documentation using Asciidoctor. Ignored by subprojects.',
)
